# Ball_Balancing_Robot

./: CMakeLists.txt  README.md
CAD/: body_plate.SLDPRT  motor_housing_v2.SLDPRT  motor_housing_v2.STL  motor_pin.SLDPRT  motor_pin.STL  motor_pin_2.SLDPRT  motor_pin_2.STL  motor_plate.SLDPRT  motor_plate.STL
Controller/: CMakeLists.txt  IMU.c  IMU.h  controller.c
